--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@mui/material": "^7.3.8",
     "@mui/x-date-pickers": "^7.0.0",
     "axios": "^1.13.4",
-    "date-fns": "^2.30.0",
     "bootstrap": "^5.3.8",
+    "date-fns": "^2.30.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^4.0.0",
+    "mammoth": "^1.11.0",
+    "pdfjs-dist": "^5.4.624",
     "react": "^19.2.0",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.2.0",
